--- a/pro page.html
+++ b/pro page.html
@@ -19,7 +19,7 @@
         </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="first.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="pro.html">Products</a></li>
                     <li><a href="">shop</a></li>
